# webserver-based-parallel-rl-training

./: .gitignore  README.md  clean.sh  distributed.config  global_variables.py  kill.sh  start.sh
experiments/: adv_meta.py  simple_meta.py  train.py
rollout/: mempool_server.py  replay_memory.py  replay_memory_lock_free.py  samples.proto
rollout/cpp/: CMakeLists.txt  Makefile  mempool_server.cpp  mempool_server.h  samples.pb.cc  samples.pb.h  samples.proto  shm.cpp
train/: main.py  network_dataset.py  send_models.sh  test.py
train/cpp/: Makefile  train.cpp
train/models/: model.py  sac.py
workers/: main.py  samples.proto  samples_pb2.py  worker.py
workers/models/: sac.py
workers/requests/: samples_pb2.py  worker.py
workers/rpc/: async_rpc_worker.py  rpc_client.cpp  samples.pb.cc  samples.pb.h  samples.proto  samples_pb2.py
workers/train/: actor.pth  critic.pth  sac_actor.pth  sac_critic.pth
